@@ -8,8 +8,8 @@ dnl empty.
 
 m4_define(pcre_major, [7])
 m4_define(pcre_minor, [6])
-m4_define(pcre_prerelease, [-RC1])
-m4_define(pcre_date, [2008-01-21])
+m4_define(pcre_prerelease, [-RC2])
+m4_define(pcre_date, [2008-01-23])
 
 # Libtool shared library interface versions (current:revision:age)
 m4_define(libpcre_version, [0:1:0])
